--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
                 Welcome to
                 <em>your</em> next website!
             </h2>
-            <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/theme/stylish-portfolio/">Download
+            <a class="btn btn-primary btn-xl" href="http://ematicth.lnwshop.com/">Download
                 Now!</a>
         </div>
     </section>
@@ -187,12 +187,14 @@
         </div>
     </section>
     <!-- Map-->
+    <!--
     <div class="map" id="contact">
         <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
         <br />
         <small><a
                 href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a></small>
     </div>
+-->
     <!-- Footer-->
     <footer class="footer text-center">
         <div class="container px-4 px-lg-5">
