--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     </script>
     <!-- End Google Tag Manager -->
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/ematic-icon.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Simple line icons-->
@@ -67,12 +67,12 @@
         <div class="container px-4 px-lg-5 text-center">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-10">
-                    <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
+                    <h2 style="display: inline">A marketing & technology</h2>
+                    <h2 style="color: #005DB2; display: inline">consultancy</h2>
                     <p class="lead mb-5">
-                        This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-                        <a href="https://unsplash.com/">Unsplash</a> !
+                        We help B2C companies build and optimize fully integrated, high-ROI digital ecosystems.
                     </p>
-                    <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
+                    <a class="btn btn-dark btn-xl" href="https://www.ematicsolutions.com/en_us/">Let's Talk</a>
                 </div>
             </div>
         </div>
@@ -186,29 +186,18 @@
             <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
         </div>
     </section>
-    <!-- Map-->
-    <!--
-    <div class="map" id="contact">
-        <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-        <br />
-        <small><a
-                href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a></small>
-    </div>
--->
     <!-- Footer-->
     <footer class="footer text-center">
         <div class="container px-4 px-lg-5">
             <ul class="list-inline mb-5">
                 <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white mr-3" href="#!"><i
-                            class="icon-social-facebook"></i></a>
+                    <a class="social-link rounded-circle text-white-social mr-3" href="#!"><i class="icon-social-facebook"></i></a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white mr-3" href="#!"><i
-                            class="icon-social-twitter"></i></a>
+                    <a class="social-link rounded-circle text-white-social mr-3" href="#!"><i class="icon-social-twitter"></i></a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
+                    <a class="social-link rounded-circle text-white-social mr-3" href="#!"><i class="icon-social-github"></i></a>
                 </li>
             </ul>
             <p class="text-muted small mb-0">Copyright &copy; Your Website 2022</p>
