--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Ematic Solutions - Demo Website</title>
-    <!-- Google Tag Manager -->
+    <!-- Google Tag Manager THES account -->
     <script>
         (function(w, d, s, l, i) {
             w[l] = w[l] || [];
@@ -25,6 +25,39 @@
         })(window, document, 'script', 'dataLayer', 'GTM-WS3VPPT');
     </script>
     <!-- End Google Tag Manager -->
+
+    <!-- Google Tag Manager Tester Email Account-->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-52KLP3M');
+    </script>
+    <!-- End Google Tag Manager -->
+
+    <!-- Google tag GA4 Tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0Z6B37L0PZ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-0Z6B37L0PZ');
+    </script>
+
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/ematic-icon.png" />
     <!-- Font Awesome icons (free version)-->
@@ -38,10 +71,16 @@
 </head>
 
 <body id="page-top">
-    <!-- Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager THES Account (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WS3VPPT" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <!-- Google Tag Manager Tester Email Account (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-52KLP3M"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <!-- Navigation-->
     <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
     <nav id="sidebar-wrapper">
