--- a/public/index.html
+++ b/public/index.html
@@ -223,7 +223,7 @@
     <section class="content-section bg-primary text-white">
         <div class="container px-4 px-lg-5 text-center">
             <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-            <a class="btn btn-xl btn-light me-4" onclick="dataLayer.push({'event': 'Click Me'});">Click Me!</a>
+            <a class="btn btn-xl btn-light me-4" onclick="click_me()">Click Me!</a>
             <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
         </div>
     </section>
