--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
-    <script src="js/onclick-test.js"></script>
+    <script type="text/javascript" src="js/onclick-test.js"></script>
 </head>
 
 <body id="page-top">
