--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
-    <script type="text/javascript" src="js/onclick-test.js"></script>
+
 </head>
 
 <body id="page-top">
@@ -250,6 +250,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+    <script src="js/onclick-test.js"></script>
 </body>
 
 </html>
