add service worker

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <meta name="author" content="" />
     <title>Ematic Solutions - Demo Website</title>
 
+    <!--Service worker -->
+    <script src="js/sw-init.js"></script>
+    <!-- -->
+
     <!-- Google Tag Manager THES account -->
     <script>
         (function(w, d, s, l, i) {
