add service worker

--- a/public/index.html
+++ b/public/index.html
@@ -291,8 +291,8 @@
     <section class="content-section bg-primary text-white">
         <div class="container px-4 px-lg-5 text-center">
             <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-            <a class="btn btn-xl btn-light me-4" onclick="click_me()">Click Me!</a>
-            <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
+            <a class="btn btn-xl btn-light me-4" onclick="sub_push()">Allow Push</a>
+            <a class="btn btn-xl btn-dark" onclick="unsub_push()">Disable Push</a>
         </div>
     </section>
     <!-- Footer-->
